# reverse-proxy

./: AGENTS.md  Cargo.toml
doctrine/: RULES.md
doctrine/code/: RULES.md
doctrine/mcp/: RULES.md
doctrine/meta/rules/: RULES.md
doctrine/meta/skills/: RULES.md
doctrine/openai/: RULES.md
doctrine/proxy/: RULES.md
doctrine/queue/: RULES.md
doctrine/tests/: RULES.md
src/: lib.rs  main.rs  mcp.rs  openai.rs  state.rs
tests/: spec.rs
tests/common/: mod.rs
