[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum         = "0.8"
tokio        = { version = "1", features = ["full"] }
async-stream = "0.3"
serde_json   = "1"
uuid         = { version = "1", features = ["v4"] }
anyhow       = "1"

[dev-dependencies]
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
futures    = "0.3"
